bug 361364: Refactoring to switch to DLTK 3