@@ -30,9 +30,9 @@ public class DefaultConverter implements Converter {
 	 */
 	private static final Map<Class<?>, Integer> BOOLEAN_DISTANCE_MAP = new HashMap<Class<?>, Integer>();
 	static {
-		BOOLEAN_DISTANCE_MAP.put(Boolean.class, new Integer(1));
-		BOOLEAN_DISTANCE_MAP.put(Boolean.TYPE, new Integer(1));
-		BOOLEAN_DISTANCE_MAP.put(Object.class, new Integer(2));
+		BOOLEAN_DISTANCE_MAP.put(Boolean.class, Integer.valueOf(1));
+		BOOLEAN_DISTANCE_MAP.put(Boolean.TYPE, Integer.valueOf(1));
+		BOOLEAN_DISTANCE_MAP.put(Object.class, Integer.valueOf(2));
 	}
 
 	/**
@@ -40,24 +40,24 @@ public class DefaultConverter implements Converter {
 	 */
 	private static final Map<Class<?>, Integer> NUMBER_DISTANCE_MAP = new HashMap<Class<?>, Integer>();
 	static {
-		NUMBER_DISTANCE_MAP.put(Byte.class, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(Byte.TYPE, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(Short.class, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(Short.TYPE, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(Integer.class, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(Integer.TYPE, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(Long.class, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(Long.TYPE, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(Float.class, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(Float.TYPE, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(Double.class, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(Double.TYPE, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(BigInteger.class, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(BigDecimal.class, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(Character.class, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(Character.TYPE, new Integer(1));
-		NUMBER_DISTANCE_MAP.put(Object.class, new Integer(2));
-		NUMBER_DISTANCE_MAP.put(String.class, new Integer(3));
+		NUMBER_DISTANCE_MAP.put(Byte.class, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(Byte.TYPE, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(Short.class, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(Short.TYPE, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(Integer.class, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(Integer.TYPE, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(Long.class, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(Long.TYPE, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(Float.class, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(Float.TYPE, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(Double.class, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(Double.TYPE, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(BigInteger.class, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(BigDecimal.class, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(Character.class, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(Character.TYPE, Integer.valueOf(1));
+		NUMBER_DISTANCE_MAP.put(Object.class, Integer.valueOf(2));
+		NUMBER_DISTANCE_MAP.put(String.class, Integer.valueOf(3));
 	}
 
 	/**
@@ -65,24 +65,24 @@ public class DefaultConverter implements Converter {
 	 */
 	private static final Map<Class<?>, Integer> STRING_DISTANCE_MAP = new HashMap<Class<?>, Integer>();
 	static {
-		STRING_DISTANCE_MAP.put(String.class, new Integer(1));
-		STRING_DISTANCE_MAP.put(Object.class, new Integer(2));
-		STRING_DISTANCE_MAP.put(Byte.class, new Integer(3));
-		STRING_DISTANCE_MAP.put(Byte.TYPE, new Integer(3));
-		STRING_DISTANCE_MAP.put(Short.class, new Integer(3));
-		STRING_DISTANCE_MAP.put(Short.TYPE, new Integer(3));
-		STRING_DISTANCE_MAP.put(Integer.class, new Integer(3));
-		STRING_DISTANCE_MAP.put(Integer.TYPE, new Integer(3));
-		STRING_DISTANCE_MAP.put(Long.class, new Integer(3));
-		STRING_DISTANCE_MAP.put(Long.TYPE, new Integer(3));
-		STRING_DISTANCE_MAP.put(Float.class, new Integer(3));
-		STRING_DISTANCE_MAP.put(Float.TYPE, new Integer(3));
-		STRING_DISTANCE_MAP.put(Double.class, new Integer(3));
-		STRING_DISTANCE_MAP.put(Double.TYPE, new Integer(3));
-		STRING_DISTANCE_MAP.put(BigInteger.class, new Integer(3));
-		STRING_DISTANCE_MAP.put(BigDecimal.class, new Integer(3));
-		STRING_DISTANCE_MAP.put(Character.class, new Integer(3));
-		STRING_DISTANCE_MAP.put(Character.TYPE, new Integer(3));
+		STRING_DISTANCE_MAP.put(String.class, Integer.valueOf(1));
+		STRING_DISTANCE_MAP.put(Object.class,Integer.valueOf(2));
+		STRING_DISTANCE_MAP.put(Byte.class, Integer.valueOf(3));
+		STRING_DISTANCE_MAP.put(Byte.TYPE, Integer.valueOf(3));
+		STRING_DISTANCE_MAP.put(Short.class, Integer.valueOf(3));
+		STRING_DISTANCE_MAP.put(Short.TYPE, Integer.valueOf(3));
+		STRING_DISTANCE_MAP.put(Integer.class, Integer.valueOf(3));
+		STRING_DISTANCE_MAP.put(Integer.TYPE, Integer.valueOf(3));
+		STRING_DISTANCE_MAP.put(Long.class, Integer.valueOf(3));
+		STRING_DISTANCE_MAP.put(Long.TYPE, Integer.valueOf(3));
+		STRING_DISTANCE_MAP.put(Float.class,Integer.valueOf(3));
+		STRING_DISTANCE_MAP.put(Float.TYPE,Integer.valueOf(3));
+		STRING_DISTANCE_MAP.put(Double.class,Integer.valueOf(3));
+		STRING_DISTANCE_MAP.put(Double.TYPE, Integer.valueOf(3));
+		STRING_DISTANCE_MAP.put(BigInteger.class, Integer.valueOf(3));
+		STRING_DISTANCE_MAP.put(BigDecimal.class, Integer.valueOf(3));
+		STRING_DISTANCE_MAP.put(Character.class, Integer.valueOf(3));
+		STRING_DISTANCE_MAP.put(Character.TYPE, Integer.valueOf(3));
 	}
 
 	/**
@@ -90,8 +90,8 @@ public class DefaultConverter implements Converter {
 	 */
 	private static final Map<Class<?>, Integer> FUNCTION_DISTANCE_MAP = new HashMap<Class<?>, Integer>();
 	static {
-		FUNCTION_DISTANCE_MAP.put(JavaFunction.class, new Integer(1));
-		FUNCTION_DISTANCE_MAP.put(Object.class, new Integer(2));
+		FUNCTION_DISTANCE_MAP.put(JavaFunction.class, Integer.valueOf(1));
+		FUNCTION_DISTANCE_MAP.put(Object.class, Integer.valueOf(2));
 	}
 
 	/**
